# ConstructGraph

./: .dockerignore  .env.example  .gitignore  .gitkeep  Dockerfile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  env.example  prod.sh  pyproject.toml  run.sh  setup.sh
.spec-workflow/: session.json
prototype/: MODERATOR_FEATURES.md  README.md  analyze.qmd  build_graph.py  output-1  processed_files.json  requirements.txt  test_text_normalization.py  view_json_outputs.py  visualize_graph.py
prototype/docs/: knowledge graph prototype.md
prototype/output/3f1d29eaabd4c3b5/: extraction.json
prototype/output/670344f59b3ee866/: extraction.json
prototype/output/d726b953251324ea/: extraction.json
prototype/output/da1884d7df6513ff/: extraction.json
prototype/output/ddb3a4cd4f4033e5/: extraction.json
prototype/papers/: clean.qmd
prototype/prompts/: extraction.txt
spec/: README.md
spec/api/: API_REFERENCE.md
spec/deployment/: DOCKER_DEVELOPMENT.md  README_EN.md  README_ZH.md
spec/development/: DEVELOPER_GUIDE.md  PACKAGE_GUIDE.md  PROMPT_MANAGEMENT.md
spec/experimental/: PROMPT_LAB_GUIDE.md
spec/technical/: SPECIFICATION.md
spec/testing/: TEST_GUIDE.md
src/: build_graph.py  processed_files.json  requirements.txt  visualize_graph.py
src/construct_graph/: __init__.py  cli.py  config.py  layout.py  models.py
src/prompt_lab/: analyze_outputs.py  run.sh  run_prompt_lab.py
src/prompts/: extraction.txt
src/server/: app.py
tests/: conftest.py
tests/unit/: test_api_constructs.py  test_api_relationships.py  test_fetchers.py
(+253 files in other folders)
